# congestion-limiter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
docs/: architecture-patterns.md  glossary.md  how-detection-works.md  index.md  queue-ordering.md  roadmap.md  why-concurrency-limiting.md
docs/plans/: 2026-03-17-simulator-design.md
simulator/: Cargo.toml  README.md  compare.gnu  compare_grid.gnu  plot.gnu  run_comparison.sh  run_step_load.sh
simulator/src/: algo.rs  client.rs  database.rs  engine.rs  event.rs  load.rs  main.rs  metrics.rs  output.rs  scenarios.rs  server.rs  simulation.rs
spec/: Apalache.tla  README.md  Variants.tla  multi_pool.qnt  multi_pool_tlc.cfg  multi_pool_tlc.tla  single_pool.cfg  single_pool.qnt
src/: aggregation.rs  lib.rs  moving_avg.rs  semaphore.rs
src/limiter/: mod.rs  partitioning.rs  rejection_delay.rs  token.rs  total.rs
src/limits/: aimd.rs  defaults.rs  fixed.rs  gradient.rs  mod.rs  vegas.rs  windowed.rs
tests/: mod.rs
