[workspace]
members = ["simulator"]

[workspace.lints.clippy]
# Casts can cause subtle bugs
as_underscore = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
# Lint groups
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allowed: abbreviations in docs are not code terms
doc_markdown = "allow"
# Allowed: repeating the struct name in a field is sometimes the only natural name
struct_field_names = "allow"
# Allowed: if-let-else is often more readable than map_or
option_if_let_else = "allow"

[package]
name = "congestion-limiter"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Thom Wright <dev@thomwright.co.uk>"]
description = """
Dynamic congestion-based concurrency limits for controlling backpressure
"""
documentation = "https://docs.rs/congestion-limiter"
homepage = "https://github.com/ThomWright/congestion-limiter"
repository = "https://github.com/ThomWright/congestion-limiter"
readme = "README.md"
keywords = ["concurrency", "congestion", "limiting", "limiter", "backpressure"]
categories = ["concurrency"]

[dependencies]
async-trait = "0.1.68"
bon = "3.3.2"
conv = "0.3.3"
rand = "0.8"
thiserror = "2.0.11"
tokio = { version = "1.28.1", features = ["sync", "time", "rt"] }

[dev-dependencies]
assert_matches = "1.5.0"
itertools = "0.13.0"
tokio = { version = "1.28.1", features = ["rt", "macros", "test-util"] }
tokio-test = "0.4.3"

[build-dependencies]
readme-rustdocifier = "0.1.0"

[lints]
workspace = true
